verify the logicGate file

--- a/jupyter/periphery/logicGate.ipynb
+++ b/jupyter/periphery/logicGate.ipynb
@@ -240,14 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_logicgate_area(gateType, num_Input, width_NMOS, width_PMOS,height_Transistor_Region, tech):\n",
     "    # if tech.get_param('featureSize') <= 14e-9:  # FinFET\n",
-    "    #     width_NMOS *= tech['PitchFin'] / (2 * tech.get_param('featureSize'))\n",
-    "    #     width_PMOS *= tech['PitchFin'] / (2 * tech.get_param('featureSize'))\n",
+    "    #     width_NMOS *= tech('PitchFin') / (2 * tech.get_param('featureSize'))\n",
+    "    #     width_PMOS *= tech('PitchFin') / (2 * tech.get_param('featureSize'))\n",
     "    #     height_Transistor_Region *= (MAX_TRANSISTOR_HEIGHT_FINFET / MAX_TRANSISTOR_HEIGHT)\n",
     "\n",
     "    ratio = width_PMOS / (width_PMOS + width_NMOS) if (width_PMOS + width_NMOS) != 0 else 0\n",
@@ -266,7 +266,6 @@
     "            temp = height_Transistor_Region - constant.MIN_GAP_BET_P_AND_N_DIFFS * tech.get_param('featureSize') - (constant.MIN_POLY_EXT_DIFF + constant.MIN_GAP_BET_FIELD_POLY / 2) * 2 * tech.get_param('featureSize')\n",
     "            maxwidth_PMOS = ratio * temp\n",
     "            maxwidth_NMOS = (1 - ratio) * temp \n",
-    "\n",
     "        #consider physical width of PMOS and NMOS which is x direction\n",
     "        unit_Width_x_P, heightRegionP = 0, 0\n",
     "        if width_PMOS > 0:\n",
@@ -293,7 +292,7 @@
     "        # def calc_max_fin(ratio_part):\n",
     "        #     return math.floor(\n",
     "        #         ratio_part * (height_Transistor_Region - MIN_GAP_BET_P_AND_N_DIFFS * tech.get_param('featureSize') -\n",
-    "        #                       (MIN_POLY_EXT_DIFF + MIN_GAP_BET_FIELD_POLY / 2) * 2 * tech.get_param('featureSize')) / tech['PitchFin']\n",
+    "        #                       (MIN_POLY_EXT_DIFF + MIN_GAP_BET_FIELD_POLY / 2) * 2 * tech.get_param('featureSize')) / tech('PitchFin')\n",
     "        #     ) + 1\n",
     "\n",
     "        # maxNumPFin, maxNumNFin = 0, 0\n",
@@ -306,26 +305,26 @@
     "        #     maxNumNFin = calc_max_fin(1 - ratio)\n",
     "\n",
     "        # unit_Width_x_P, heightRegionP = 0, 0\n",
-    "        # NumPFin = math.ceil(width_PMOS / tech['PitchFin'])\n",
+    "        # NumPFin = math.ceil(width_PMOS / tech('PitchFin'))\n",
     "        # if NumPFin > 0:\n",
     "        #     if NumPFin <= maxNumPFin:\n",
     "        #         unit_Width_x_P = 2 * (POLY_WIDTH_FINFET + MIN_GAP_BET_GATE_POLY_FINFET) * tech.get_param('featureSize')\n",
-    "        #         heightRegionP = (NumPFin - 1) * tech['PitchFin'] + tech['widthFin']\n",
+    "        #         heightRegionP = (NumPFin - 1) * tech('PitchFin') + tech('widthFin')\n",
     "        #     else:\n",
     "        #         num_Folded_PMOS = math.ceil(NumPFin / maxNumPFin)\n",
     "        #         unit_Width_x_P = (num_Folded_PMOS + 1) * (POLY_WIDTH_FINFET + MIN_GAP_BET_GATE_POLY_FINFET) * tech.get_param('featureSize')\n",
-    "        #         heightRegionP = (maxNumPFin - 1) * tech['PitchFin'] + tech['widthFin']\n",
+    "        #         heightRegionP = (maxNumPFin - 1) * tech('PitchFin') + tech('widthFin')\n",
     "\n",
     "        # unit_Width_x_N, heightRegionN = 0, 0\n",
-    "        # NumNFin = math.ceil(width_NMOS / tech['PitchFin'])\n",
+    "        # NumNFin = math.ceil(width_NMOS / tech('PitchFin'))\n",
     "        # if NumNFin > 0:\n",
     "        #     if NumNFin <= maxNumNFin:\n",
     "        #         unit_Width_x_N = 2 * (POLY_WIDTH_FINFET + MIN_GAP_BET_GATE_POLY_FINFET) * tech.get_param('featureSize')\n",
-    "        #         heightRegionN = (NumNFin - 1) * tech['PitchFin'] + tech['widthFin']\n",
+    "        #         heightRegionN = (NumNFin - 1) * tech('PitchFin') + tech('widthFin')\n",
     "        #     else:\n",
     "        #         num_Folded_NMOS = math.ceil(NumNFin / maxNumNFin)\n",
     "        #         unit_Width_x_N = (num_Folded_NMOS + 1) * (POLY_WIDTH_FINFET + MIN_GAP_BET_GATE_POLY_FINFET) * tech.get_param('featureSize')\n",
-    "        #         heightRegionN = (maxNumNFin - 1) * tech['PitchFin'] + tech['widthFin']\n",
+    "        #         heightRegionN = (maxNumNFin - 1) * tech('PitchFin') + tech('widthFin')\n",
     "        print(\"FinFET support is not implemented in this version.\")\n",
     "\n",
     "    # # gate type width computation\n",
@@ -351,15 +350,18 @@
     "    else:\n",
     "        width_x_P = width_x_N = 0\n",
     "\n",
-    "    print(\"unit_Width_x_P:\", unit_Width_x_P)\n",
-    "    print(\"unit_Width_x_N:\", unit_Width_x_N)\n",
-    "    print(\"num_Input:\", num_Input)\n",
+    "    print(\"maxtransistor height:\", height_Transistor_Region)\n",
+    "    print(\"maxwidth_PMOS:\", maxwidth_PMOS)\n",
+    "    print(\"maxwidth_NMOS:\", maxwidth_NMOS)\n",
+    "    # print(\"unit_Width_x_P:\", unit_Width_x_P)\n",
+    "    # print(\"unit_Width_x_N:\", unit_Width_x_N)\n",
+    "    # print(\"num_Input:\", num_Input)\n",
     "    print(\"num_Folded_PMOS:\", num_Folded_PMOS)\n",
-    "    print(unit_Width_x_P/2)\n",
-    "    print((num_Input+1))\n",
-    "    print(unit_Width_x_N/2 * (num_Input+1))\n",
-    "    print(\"width_x_P:\", width_x_P)\n",
-    "    print(\"width_x_N:\", width_x_N)\n",
+    "    # print(unit_Width_x_P/2)\n",
+    "    # print((num_Input+1))\n",
+    "    # print(unit_Width_x_N/2 * (num_Input+1))\n",
+    "    # print(\"width_x_P:\", width_x_P)\n",
+    "    # print(\"width_x_N:\", width_x_N)\n",
     "    width_x = max(width_x_P, width_x_N)\n",
     "    height_y = height_Transistor_Region\n",
     "    return width_x, height_y, width_x * height_y\n"
@@ -367,31 +369,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "unit_Width_x_P: 6.84e-07\n",
-      "unit_Width_x_N: 6.84e-07\n",
-      "num_Input: 2\n",
+      "maxtransistor height: 1.2600000000000002e-06\n",
+      "maxwidth_PMOS: 4.702500000000001e-07\n",
+      "maxwidth_NMOS: 4.702500000000001e-07\n",
       "num_Folded_PMOS: 3\n",
-      "3.42e-07\n",
-      "3\n",
-      "1.026e-06\n",
-      "width_x_P: 2.3940000000000003e-06\n",
-      "width_x_N: 2.3940000000000003e-06\n",
-      "unit_Width_x_P: 6.84e-07\n",
-      "unit_Width_x_N: 6.84e-07\n",
-      "num_Input: 1\n",
+      "maxtransistor height: 1.2600000000000002e-06\n",
+      "maxwidth_PMOS: 4.702500000000001e-07\n",
+      "maxwidth_NMOS: 4.702500000000001e-07\n",
       "num_Folded_PMOS: 3\n",
-      "3.42e-07\n",
-      "2\n",
-      "6.84e-07\n",
-      "width_x_P: 6.84e-07\n",
-      "width_x_N: 6.84e-07\n",
       "NAND Width: 2.39e-06 m\n",
       "NAND Height: 1.26e-06 m\n",
       "NAND Area: 3.02e-12 m²\n",
@@ -423,18 +415,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_logicgate_cap(gate_type, num_Input, width_NMOS, width_PMOS, height_transistor_region, tech):\n",
     "    \n",
-    "    ratio = width_pmos / (width_pmos + width_nmos) if (width_pmos + width_nmos) > 0 else 0\n",
+    "    ratio = width_PMOS / (width_PMOS + width_NMOS) if (width_PMOS + width_NMOS) > 0 else 0\n",
     "    num_folded_pmos = num_folded_nmos = 1\n",
     "    # FinFET adjustment\n",
     "    if tech.get_param('featureSize') <= 14e-9:\n",
-    "        width_nmos *= tech['PitchFin'] / (2 * tech.get_param('featureSize'))\n",
-    "        width_pmos *= tech['PitchFin'] / (2 * tech.get_param('featureSize'))\n",
+    "        width_NMOS *= tech('PitchFin') / (2 * tech.get_param('featureSize'))\n",
+    "        width_PMOS *= tech('PitchFin') / (2 * tech.get_param('featureSize'))\n",
     "        height_transistor_region *= (34 / 28)\n",
     "\n",
     "    #consider electrical width of PMOS and NMOS which is y direction\n",
@@ -459,8 +451,8 @@
     "                height_Drain_P = width_PMOS\n",
     "            else:\n",
     "                num_Folded_PMOS = math.ceil(width_PMOS / maxwidth_PMOS)\n",
-    "                unit_width_Drain_P = math.ceil((num_Folded_PMOS+1)/2) * tech.featureSizeconstant.MIN_GAP_BET_GATE_POLY * tech.get_param('featureSize') \n",
-    "                unit_width_Source_P = math.floor((num_Folded_PMOS+1)/2) * tech.featureSizeconstant.MIN_GAP_BET_GATE_POLY * tech.get_param('featureSize') \n",
+    "                unit_width_Drain_P = math.ceil((num_Folded_PMOS+1)/2) * constant.MIN_GAP_BET_GATE_POLY * tech.get_param('featureSize') \n",
+    "                unit_width_Source_P = math.floor((num_Folded_PMOS+1)/2) * constant.MIN_GAP_BET_GATE_POLY * tech.get_param('featureSize') \n",
     "                height_Drain_P = maxwidth_PMOS\n",
     "        else:\n",
     "            unit_width_Drain_P = unit_Width_Source_P = height_Drain_P = 0\n",
@@ -480,7 +472,7 @@
     "    \n",
     "    else:  # FinFET\n",
     "        print(\"FinFET support is not implemented in this version.\")\n",
-    "        # pitch = tech['PitchFin']\n",
+    "        # pitch = tech('PitchFin')\n",
     "        # tech.get_param('featureSize') = tech.get_param('featureSize')\n",
     "        # height_effective = height_transistor_region - (1.0 + 1.6 / 2) * 2 * tech.get_param('featureSize')\n",
     "        # max_num_pfin = int((ratio * (height_effective - 3.5 * tech.get_param('featureSize'))) / pitch) + 1\n",
@@ -493,12 +485,12 @@
     "        #     if num_fin <= max_fin:\n",
     "        #         unit_drain = tech_val\n",
     "        #         unit_source = tech_val\n",
-    "        #         height_drain = (num_fin - 1) * pitch + tech['widthFin']\n",
+    "        #         height_drain = (num_fin - 1) * pitch + tech('widthFin')\n",
     "        #     else:\n",
     "        #         folds = math.ceil(num_fin / max_fin)\n",
     "        #         unit_drain = math.ceil((folds + 1) / 2) * tech_val\n",
     "        #         unit_source = math.floor((folds + 1) / 2) * tech_val\n",
-    "        #         height_drain = (max_fin - 1) * pitch + tech['widthFin']\n",
+    "        #         height_drain = (max_fin - 1) * pitch + tech('widthFin')\n",
     "        #     return unit_drain, unit_source, height_drain, folds if num_fin > max_fin else 1\n",
     "\n",
     "        # unit_width_drain_p, unit_width_source_p, height_drain_p, num_folded_pmos = calc_drain_finfet(\n",
@@ -531,12 +523,12 @@
     "            \n",
     "\n",
     "\n",
-    "    cap_drain_bottom_p = width_drain_p * height_Drain_P * tech['capJunction']\n",
-    "    cap_drain_bottom_n = width_drain_n * height_Drain_N * tech['capJunction']\n",
-    "    cap_drain_side_p = width_drain_sidewall_p * tech['capSidewall']\n",
-    "    cap_drain_side_n = width_drain_sidewall_n * tech['capSidewall']\n",
-    "    cap_drain_channel_p = num_folded_pmos * height_Drain_P * tech['capDrainToChannel']\n",
-    "    cap_drain_channel_n = num_folded_nmos * height_Drain_N * tech['capDrainToChannel']\n",
+    "    cap_drain_bottom_p = width_drain_p * height_Drain_P * tech.get_param('capJunction')\n",
+    "    cap_drain_bottom_n = width_drain_n * height_Drain_N * tech.get_param('capJunction')\n",
+    "    cap_drain_side_p = width_drain_sidewall_p * tech.get_param('capSidewall')\n",
+    "    cap_drain_side_n = width_drain_sidewall_n * tech.get_param('capSidewall')\n",
+    "    cap_drain_channel_p = num_folded_pmos * height_Drain_P * tech.get_param('capDrainToChannel')\n",
+    "    cap_drain_channel_n = num_folded_nmos * height_Drain_N * tech.get_param('capDrainToChannel')\n",
     "\n",
     "    cap_output = cap_drain_bottom_p + cap_drain_bottom_n + cap_drain_side_p + cap_drain_side_n + \\\n",
     "                 cap_drain_channel_p + cap_drain_channel_n\n",
@@ -547,7 +539,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAND Input Capacitance: 1.96e-15 F\n",
+      "NAND Output Capacitance: 7.64e-16 F\n",
+      "INV Input Capacitance: 1.96e-15 F\n",
+      "INV Output Capacitance: 7.64e-16 F\n"
+     ]
+    }
+   ],
+   "source": [
+    "width_nmos = 1e-6  # 1µm\n",
+    "width_pmos = 1e-6  # 2µm\n",
+    "\n",
+    "height_out_y = [0]\n",
+    "width_out_x = [0]\n",
+    "\n",
+    "cap_input_nand, cap_output_nand  = calculate_logicgate_cap(constant.NAND, 2, width_nmos, width_pmos,\n",
+    "                                      constant.MAX_TRANSISTOR_HEIGHT*tech45.get_param('featureSize'), tech45 )\n",
+    "cap_input_inv, cap_output_inv = calculate_logicgate_cap(constant.INV, 1, width_nmos, width_pmos,\n",
+    "                                        constant.MAX_TRANSISTOR_HEIGHT*tech45.get_param('featureSize'), tech45 )\n",
+    "print(f\"NAND Input Capacitance: {cap_input_nand:.2e} F\")\n",
+    "print(f\"NAND Output Capacitance: {cap_output_nand:.2e} F\")\n",
+    "print(f\"INV Input Capacitance: {cap_input_inv:.2e} F\")\n",
+    "print(f\"INV Output Capacitance: {cap_output_inv:.2e} F\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,18 +581,18 @@
     "    if temp_index > 100 or temp_index < 0:\n",
     "        raise ValueError(\"Error: Temperature is out of range (300K to 400K)\")\n",
     "\n",
-    "    leak_n = tech['currentOffNmos']\n",
-    "    leak_p = tech['currentOffPmos']\n",
+    "    leak_n = tech.get_param('currentOffNmos')\n",
+    "    leak_p = tech.get_param('currentOffPmos')\n",
     "\n",
     "    if tech.get_param('featureSize') >= 22e-9 or tech.get_param('transistorType') != 'conventional':\n",
     "        # Bulk CMOS\n",
     "        width_nmos_eff = width_nmos\n",
     "        width_pmos_eff = width_pmos\n",
     "    else:  # FinFET\n",
-    "        width_nmos *= tech['PitchFin'] / (2 * tech.get_param('featureSize'))\n",
-    "        width_pmos *= tech['PitchFin'] / (2 * tech.get_param('featureSize'))\n",
-    "        width_nmos_eff = math.ceil(width_nmos / tech['PitchFin']) * (2 * tech['heightFin'] + tech['widthFin'])\n",
-    "        width_pmos_eff = math.ceil(width_pmos / tech['PitchFin']) * (2 * tech['heightFin'] + tech['widthFin'])\n",
+    "        width_nmos *= tech.get_param('PitchFin') / (2 * tech.get_param('featureSize'))\n",
+    "        width_pmos *= tech.get_param('PitchFin') / (2 * tech.get_param('featureSize'))\n",
+    "        width_nmos_eff = math.ceil(width_nmos / tech.get_param('PitchFin')) * (2 * tech.get_param('heightFin') + tech.get_param('widthFin'))\n",
+    "        width_pmos_eff = math.ceil(width_pmos / tech.get_param('PitchFin')) * (2 * tech.get_param('heightFin') + tech.get_param('widthFin'))\n",
     "\n",
     "    if gate_type == constant.INV:  # INV\n",
     "        leakage_n = width_nmos_eff * leak_n[temp_index]\n",
@@ -591,7 +616,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAND Leakage Current: 7.68e-14 A\n",
+      "INV Leakage Current: 9.00e-14 A\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature = 300  # Kelvin\n",
+    "leakage_nand  = calculate_logicgate_leakage(constant.NAND, 2, width_nmos, width_pmos,\n",
+    "                                      temperature, tech45 )\n",
+    "leakage_inv = calculate_logicgate_leakage(constant.INV, 1, width_nmos, width_pmos,\n",
+    "                                        temperature, tech45 )\n",
+    "print(f\"NAND Leakage Current: {leakage_nand:.2e} A\")\n",
+    "print(f\"INV Leakage Current: {leakage_inv:.2e} A\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,23 +659,47 @@
     "        width_eff = width\n",
     "    else:\n",
     "        # FinFET: convert width to number of fins\n",
-    "        width *= tech['PitchFin'] / (2 * tech.get_param('featureSize'))\n",
-    "        width_eff = math.ceil(width / tech['PitchFin']) * (2 * tech['heightFin'] + tech['widthFin'])\n",
+    "        width *= tech('PitchFin') / (2 * tech.get_param('featureSize'))\n",
+    "        width_eff = math.ceil(width / tech('PitchFin')) * (2 * tech('heightFin') + tech('widthFin'))\n",
     "\n",
     "    # based on lookup table for current on\n",
     "    if mos_type == 0:  # NMOS\n",
-    "        I_on = tech['currentOnNmos'][temp_index]\n",
+    "        I_on = tech.get_param('currentOnNmos')[temp_index]\n",
     "    else:              # PMOS\n",
-    "        I_on = tech['currentOnPmos'][temp_index]\n",
+    "        I_on = tech.get_param('currentOnPmos')[temp_index]\n",
     "\n",
     "    # calculate the on-resistance\n",
-    "    resistance = tech['effectiveResistanceMultiplier'] * tech['vdd'] / (I_on * width_eff)\n",
+    "    resistance = tech.get_param('effectiveResistanceMultiplier') * tech.get_param('vdd') / (I_on * width_eff)\n",
     "    return resistance\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NMOS On-Resistance: 1.08e+09 Ω\n",
+      "PMOS On-Resistance: 7.14e+08 Ω\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature = 300  # Kelvin\n",
+    "width_nmos = 1e-6  # 1µm\n",
+    "width_pmos = 2e-6  # 2µm\n",
+    "on_resistance_NMOS  = calculate_on_resistance(width_nmos, constant.NMOS,temperature, tech45 )\n",
+    "on_resistance_PMOS = calculate_on_resistance(width_pmos, constant.PMOS ,temperature, tech45 )\n",
+    "print(f\"NMOS On-Resistance: {on_resistance_NMOS:.2e} Ω\")\n",
+    "print(f\"PMOS On-Resistance: {on_resistance_PMOS:.2e} Ω\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,15 +709,39 @@
     "    returns the transconductance in siemens (S)\n",
     "    \"\"\"\n",
     "    # assume Vgs is at 70% of Vdd for overdrive voltage calculation\n",
-    "    v_ov = 0.7 * tech['vdd'] - tech['vth']  # effective overdrive voltage\n",
+    "    v_ov = 0.7 * tech.get_param('vdd') - tech.get_param('vth')  # effective overdrive voltage\n",
     "\n",
     "    # gm = (2 * I_on) / V_ov\n",
     "    if mos_type == 0:  # NMOS\n",
-    "        gm = (2 * tech['current_gmNmos']) * width / v_ov\n",
+    "        gm = (2 * tech.get_param('current_gmNmos')) * width / v_ov\n",
     "    else:  # PMOS\n",
-    "        gm = (2 * tech['current_gmPmos']) * width / v_ov\n",
+    "        gm = (2 * tech.get_param('current_gmPmos')) * width / v_ov\n",
     "\n",
     "    return gm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NMOS transconductance: 3.85e-09 s\n",
+      "PMOS transconductance: 6.15e-09 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature = 300  # Kelvin\n",
+    "width_nmos = 1e-6  # 1µm\n",
+    "width_pmos = 2e-6  # 2µm\n",
+    "transconductance_NMOS = calculate_transconductance(width_nmos, constant.NMOS, tech45)\n",
+    "transconductance_PMOS = calculate_transconductance(width_pmos, constant.PMOS, tech45)\n",
+    "print(f\"NMOS transconductance: {transconductance_NMOS:.2e} s\")\n",
+    "print(f\"PMOS transconductance: {transconductance_PMOS:.2e} s\")"
    ]
   },
   {
