add subarray module

--- a/jupyter/periphery/logicGate.ipynb
+++ b/jupyter/periphery/logicGate.ipynb
@@ -539,6 +539,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_drain_cap(mos_type, width,height_transistor_region,tech ):\n",
+    "    if mos_type == 'nmos':\n",
+    "        drain_cap = calculate_logicgate_cap(constant.INV,1, width, 0, height_transistor_region, tech)[1]\n",
+    "    else:\n",
+    "        drain_cap = calculate_logicgate_cap(constant.INV,1, 0, width, height_transistor_region, tech)[1]\n",
+    "\n",
+    "    return drain_cap"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
    "outputs": [
