--- a/jupyter/simulator/subarray.ipynb
+++ b/jupyter/simulator/subarray.ipynb
@@ -6,7 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math"
+    "import numpy as np\n",
+    "import math\n",
+    "import sys\n",
+    "sys.path.append('../../python/')  \n",
+    "from periphery import logicGate\n",
+    "from periphery import constant\n",
+    "print(constant.INV)"
    ]
   },
   {
@@ -16,48 +22,79 @@
    "outputs": [],
    "source": [
     "class SubArray:\n",
-    "    def __init__(self, input_param: InputParameter, tech: Technology, cell: MemCell):\n",
-    "        self.input_param = input_param\n",
+    "    def __init__(self, tech, param, config,relaxArrayCellWidth,relaxArrayCellHeight):\n",
     "        self.tech = tech\n",
-    "        self.cell = cell\n",
+    "        self.param = param\n",
+    "        self.config = config\n",
     "        self.initialized = False\n",
+    "        self.relaxArrayCellWidth = relaxArrayCellWidth\n",
+    "        self.relaxArrayCellHeight = relaxArrayCellHeight\n",
     "\n",
     "    def initialize(self, numRow, numCol, unitWireRes):\n",
     "        self.numRow = numRow\n",
     "        self.numCol = numCol\n",
     "        self.unitWireRes = unitWireRes\n",
     "\n",
-    "        feature_size = self.tech.featureSize\n",
-    "        min_cell_height = 2.0  # MAX_TRANSISTOR_HEIGHT placeholder\n",
-    "        min_cell_width = (0.2 + 0.1) * 2  # MIN_GAP_BET_GATE_POLY + POLY_WIDTH as placeholder\n",
+    "        feature_size = self.tech['featureSize']\n",
+    "        min_cell_height = self.tech['MAX_TRANSISTOR_HEIGHT'];  #set real layout cell height\n",
+    "        min_cell_width =  (self.tech['MIN_GAP_BET_GATE_POLY'] + self.tech['POLY_WIDTH']) * 2;  #set real layout cell width\n",
+    "        siolation_region = self.tech['MIN_POLY_EXT_DIFF'] * 2 + self.tech['MIN_GAP_BET_FIELD_POLY']\n",
+    "\n",
+    "        #############################################\n",
+    "        # to be done: for the technology below 14nm, there will be some tuning for the cell width and height and islation region\n",
+    "        #############################################\n",
     "\n",
     "        if self.cell.memCellType == 'SRAM':\n",
-    "            width = max(self.cell.widthInFeatureSize, min_cell_width)\n",
-    "            height = max(self.cell.heightInFeatureSize, min_cell_height)\n",
-    "            self.lengthRow = numCol * width * feature_size\n",
-    "            self.lengthCol = numRow * height * feature_size\n",
-    "\n",
-    "        elif self.cell.memCellType in ['RRAM', 'FeFET']:\n",
-    "            width = self.cell.widthInFeatureSize\n",
-    "            height = self.cell.heightInFeatureSize\n",
-    "\n",
-    "            if self.cell.accessType == 'CMOS_access':\n",
-    "                width = max(width, min_cell_width * 2)\n",
-    "                height = max(height, min_cell_height)\n",
+    "            if self.relaxArrayCellWidth:\n",
+    "                width = max(self.config.widthInFeatureSize, min_cell_width)\n",
+    "                height = max(self.config.heightInFeatureSize, min_cell_height)\n",
+    "                self.lengthRow = numCol * width * feature_size\n",
+    "                self.lengthCol = numRow * height * feature_size\n",
     "            else:\n",
-    "                width = max(width * feature_size, min_cell_width * 2 * feature_size)\n",
-    "                height = max(height * feature_size, min_cell_height * feature_size)\n",
+    "                self.lengthRow = numCol * self.config.widthInFeatureSize * feature_size\n",
+    "            if self.relaxArrayCellHeight:\n",
+    "                self.lengthCol = numRow * height * feature_size\n",
+    "            else:\n",
+    "                self.lengthCol = numRow * self.config.heightInFeatureSize * feature_size\n",
     "\n",
-    "            self.lengthRow = numCol * width\n",
-    "            self.lengthCol = numRow * height\n",
+    "        self.arraywidthunit = self.config.widthInFeatureSize * feature_size\n",
+    "        self.arrayheightunit = numRow * self.config.heightInFeatureSize * feature_size\n",
+    "        ###finish setting array size\n",
     "\n",
-    "        # 电容和电阻估算\n",
-    "        self.capRow1 = self.lengthRow * 0.2e-15 / 1e-6\n",
-    "        self.capRow2 = self.capRow1\n",
+    "        # elif self.cell.memCellType in ['RRAM', 'FeFET']:\n",
+    "        #     width = self.cell.widthInFeatureSize\n",
+    "        #     height = self.cell.heightInFeatureSize\n",
+    "\n",
+    "        #     if self.cell.accessType == 'CMOS_access':\n",
+    "        #         width = max(width, min_cell_width * 2)\n",
+    "        #         height = max(height, min_cell_height)\n",
+    "        #     else:\n",
+    "        #         width = max(width * feature_size, min_cell_width * 2 * feature_size)\n",
+    "        #         height = max(height * feature_size, min_cell_height * feature_size)\n",
+    "\n",
+    "        #     self.lengthRow = numCol * width\n",
+    "        #     self.lengthCol = numRow * height\n",
+    "\n",
+    "        # cap and resistance calculation\n",
+    "        self.capRow1 = self.lengthRow * 0.2e-15 / 1e-6      # BL for 1T1R, WL for Cross-point and SRAM\n",
+    "        self.capRow2 = self.capRow1                         # WL for 1T1R\n",
     "        self.capCol = self.lengthCol * 0.2e-15 / 1e-6\n",
-    "        self.resRow = self.lengthRow * unitWireRes\n",
-    "        self.resCol = self.lengthCol * unitWireRes\n",
+    "        self.resRow = self.lengthRow * self.config.Metal1_unitwireresis\n",
+    "        self.resCol = self.lengthCol * self.config.Metal0_unitwireresis\n",
     "\n",
+    "        #start to initialize the subarray modules\n",
+    "        if self.cell.memCellType == 'SRAM':\n",
+    "            #firstly calculate the CMOS resistance and capacitance\n",
+    "            width_access_cmos = self.config.widthAccessCMOS\n",
+    "            scale_factor = 2 if feature_size <= 14e-9 else 1\n",
+    "            effective_width = width_access_cmos * scale_factor * feature_size\n",
+    "            # resCellAccess = logic_gate.calculate_on_resistance(cell.widthAccessCMOS * ((tech.featureSize <= 14*1e-9)? 2:1) * tech.featureSize, NMOS, inputParameter.temperature, tech);\n",
+    "            resCellAccess = logic_gate.calculate_on_resistance(effective_width,constant.NMOS,self.config.temperature, self.tech)\n",
+    "            capCellAccess = logic_gate.calculate_drain_cap(effective_width,constant.NMOS, self.tech['MAX_TRANSISTOR_HEIGHT'] * feature_size, self.tech)\n",
+    "             \n",
+    "\t\t    cell.capSRAMCell = capCellAccess + CalculateDrainCap(cell.widthSRAMCellNMOS * ((tech.featureSize <= 14*1e-9)? 2:1) * tech.featureSize, NMOS, MAX_TRANSISTOR_HEIGHT * tech.featureSize, tech) \n",
+    "\t\t\t\t\t\t+ CalculateDrainCap(cell.widthSRAMCellPMOS * ((tech.featureSize <= 14*1e-9)? 2:1) * tech.featureSize, PMOS, MAX_TRANSISTOR_HEIGHT * tech.featureSize, tech) \n",
+    "\t\t\t\t\t\t+ CalculateGateCap(cell.widthSRAMCellNMOS * ((tech.featureSize <= 14*1e-9)? 2:1) * tech.featureSize, tech) + CalculateGateCap(cell.widthSRAMCellPMOS * ((tech.featureSize <= 14*1e-9)? 2:1) * tech.featureSize, tech);\n",
     "        self.initialized = True\n"
    ]
   },
