sync up decoder

--- a/jupyter/periphery/logicGate.ipynb
+++ b/jupyter/periphery/logicGate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
     "\n",
     "    cap_output = cap_drain_bottom_p + cap_drain_bottom_n + cap_drain_side_p + cap_drain_side_n + \\\n",
     "                 cap_drain_channel_p + cap_drain_channel_n\n",
-    "    cap_input = calculate_mos_gate_cap(width_nmos, tech) + calculate_mos_gate_cap(width_pmos, tech)\n",
+    "    cap_input = calculate_mos_gate_cap(width_NMOS, tech) + calculate_mos_gate_cap(width_PMOS, tech)\n",
     "\n",
     "    return cap_input, cap_output\n"
    ]
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,6 +791,29 @@
     "    ramp_output = (1 - vs) / result if result != 0 else 0\n",
     "\n",
     "    return result, ramp_output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Propagation Delay: 2.24e-01 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "beta = 0.5  # output response factor\n",
+    "ramp_input = 1e-9  # input ramp time in seconds\n",
+    "res = 1e6\n",
+    "cap = 1e-16  # output capacitance in farads\n",
+    "tr = res * cap  # intrinsic delay (time constant)\n",
+    "delay, ramp_output = horowitz(tr, beta, ramp_input)\n",
+    "print(f\"Propagation Delay: {delay:.2e} s\")"
    ]
   },
   {
