--- a/jupyter/simulator/subarray.ipynb
+++ b/jupyter/simulator/subarray.ipynb
@@ -24,11 +24,12 @@
     "class SubArray:\n",
     "    def __init__(self, tech, param, config,relaxArrayCellWidth,relaxArrayCellHeight):\n",
     "        self.tech = tech\n",
-    "        self.param = param\n",
-    "        self.config = config\n",
+    "        self.param = param  ##technology parameters\n",
+    "        self.config = config ##user input parameters\n",
     "        self.initialized = False\n",
     "        self.relaxArrayCellWidth = relaxArrayCellWidth\n",
     "        self.relaxArrayCellHeight = relaxArrayCellHeight\n",
+    "        self.sram_mode = False\n",
     "\n",
     "    def initialize(self, numRow, numCol, unitWireRes):\n",
     "        self.numRow = numRow\n",
@@ -88,14 +89,51 @@
     "            width_access_cmos = self.config.widthAccessCMOS\n",
     "            scale_factor = 2 if feature_size <= 14e-9 else 1\n",
     "            effective_width = width_access_cmos * scale_factor * feature_size\n",
+    "\n",
+    "            width_sram_cell_nmos = self.config.widthSRAMCellNMOS\n",
+    "            width_sram_cell_pmos = self.config.widthSRAMCellPMOS\n",
+    "            effective_width_nmos = width_sram_cell_nmos * scale_factor * feature_size\n",
+    "            effective_width_pmos = width_sram_cell_pmos * scale_factor * feature_size\n",
+    "\n",
     "            # resCellAccess = logic_gate.calculate_on_resistance(cell.widthAccessCMOS * ((tech.featureSize <= 14*1e-9)? 2:1) * tech.featureSize, NMOS, inputParameter.temperature, tech);\n",
     "            resCellAccess = logic_gate.calculate_on_resistance(effective_width,constant.NMOS,self.config.temperature, self.tech)\n",
     "            capCellAccess = logic_gate.calculate_drain_cap(effective_width,constant.NMOS, self.tech['MAX_TRANSISTOR_HEIGHT'] * feature_size, self.tech)\n",
     "             \n",
-    "\t\t    cell.capSRAMCell = capCellAccess + CalculateDrainCap(cell.widthSRAMCellNMOS * ((tech.featureSize <= 14*1e-9)? 2:1) * tech.featureSize, NMOS, MAX_TRANSISTOR_HEIGHT * tech.featureSize, tech) \n",
-    "\t\t\t\t\t\t+ CalculateDrainCap(cell.widthSRAMCellPMOS * ((tech.featureSize <= 14*1e-9)? 2:1) * tech.featureSize, PMOS, MAX_TRANSISTOR_HEIGHT * tech.featureSize, tech) \n",
-    "\t\t\t\t\t\t+ CalculateGateCap(cell.widthSRAMCellNMOS * ((tech.featureSize <= 14*1e-9)? 2:1) * tech.featureSize, tech) + CalculateGateCap(cell.widthSRAMCellPMOS * ((tech.featureSize <= 14*1e-9)? 2:1) * tech.featureSize, tech);\n",
-    "        self.initialized = True\n"
+    "            cell.capSRAMCell = (capCellAccess + logic_gate.calculate_drain_cap(effective_width_nmos, constant.NMOS, self.tech['MAX_TRANSISTOR_HEIGHT'] * feature_size, self.tech) \n",
+    "                        + logic_gate.calculate_drain_cap(effective_width_pmos, constant.PMOS, self.tech['MAX_TRANSISTOR_HEIGHT'] * feature_size, self.tech) \n",
+    "                        + logic_gate.calculate_mos_gate_cap(effective_width_nmos, self.tech) + logic_gate.calculate_mos_gate_cap(effective_width_pmos, self.tech))\n",
+    "            \n",
+    "            unit_cap = self.capRow1/self.param['numColSubArray']\n",
+    "            unit_res = self.resRow/self.param['numColSubArray']\n",
+    "            if self.tech['featureSize'] <= 14e-9:\n",
+    "                # self.capCol += self.tech['cap_draintotal'] * self.cell.widthAccessCMOS * self.tech['effective_width'] * self.numRow\n",
+    "                print(\"to be done\")\n",
+    "            else:\n",
+    "                drain_cap = logic_gate.calculate_drain_cap(effective_width, constant.NMOS, self.tech['MAX_TRANSISTOR_HEIGHT'] * self.tech['featureSize'], self.tech)\n",
+    "                self.capCol += drain_cap * self.numRow\n",
+    "\n",
+    "            ##########################\n",
+    "            #initialize the periphery\n",
+    "            ##########################\n",
+    "            self.sram_write_driver = SRAMWriteDriver(self.input_param, self.tech, self.cell)\n",
+    "            self.row_decoder = RowDecoder(mode=\"REGULAR_ROW\",num_addr_row=int(math.ceil(math.log2(self.numRow))),mux=False,parallel=False,tech=self.tech,input_param=self.input_param)\n",
+    "\n",
+    "            if self.sram_mode == \"conventional_sequential\":\n",
+    "                #sum up all the gate cap of access CMOS, as the row cap\n",
+    "                gate_cap = logic_gate.calculate_gate_cap(effective_width, self.tech)    \n",
+    "                #to be determined why the factor is 2\n",
+    "                ##################################################################################\n",
+    "                self.capRow1 += 2 * gate_cap * numCol  # 2 for NMOS and PMOS   \n",
+    "                #######initialize the write driver########################\n",
+    "                self.sram_write_driver.initialize(\n",
+    "                    num_col=self.numCol,\n",
+    "                    activity_col_write=self.activityColWrite,\n",
+    "                    num_write_cell_per_op=self.numWriteCellPerOperationNeuro\n",
+    "                )     \n",
+    "                #######initialize the wl decoder########################\n",
+    "                #######initialize the sense amp########################\n",
+    "\n",
+    "                self.initialized = True\n"
    ]
   },
   {
